# cookiecutter-uv

./: README.md  cookiecutter.json  instructions.md
hooks/: post_gen_project.py  pre_gen_project.py
{{cookiecutter.project_slug}}/: .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml
{{cookiecutter.project_slug}}/.ai/: README.md  architecture-decisions.md  claude-code-instructions.md  coding-standards.md  project-context.md  quick-reference.md
{{cookiecutter.project_slug}}/.ai/adrs/: 001-src-layout.md  002-mirror-test-structure.md  003-uv-dependency-management.md  004-makefile-interface.md  005-cli-framework.md  006-module-organization.md  007-configuration-management.md  008-error-handling.md  009-composition-over-inheritance.md  010-deep-modules.md  011-isolate-frameworks.md  012-self-descriptive-codes.md  013-limit-nesting.md
{{cookiecutter.project_slug}}/.ai/standards/: python-style.md  testing.md
{{cookiecutter.project_slug}}/.claude/agents/: code-reviewer.md  python-architect.md  ui-designer.md
{{cookiecutter.project_slug}}/.github/workflows/: ci.yml
{{cookiecutter.project_slug}}/scripts/: update_ai_config.py
{{cookiecutter.project_slug}}/src/{{cookiecutter.package_name}}/: __init__.py  cli.py
{{cookiecutter.project_slug}}/src/{{cookiecutter.package_name}}/api/: __init__.py
{{cookiecutter.project_slug}}/src/{{cookiecutter.package_name}}/core/: __init__.py  example.py
{{cookiecutter.project_slug}}/src/{{cookiecutter.package_name}}/db/: __init__.py
{{cookiecutter.project_slug}}/src/{{cookiecutter.package_name}}/utils/: __init__.py
{{cookiecutter.project_slug}}/tests/core/: test_example.py
